--- a/_config.yml
+++ b/_config.yml
@@ -132,17 +132,18 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: My blogs # blog_name will be displayed in your blog page
+blog_description: a simple attempt at writting something
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
+alshedivat.github.io/al-folio/ 
 pagination:
  enabled: true
 
 related_blog_posts:
-  enabled: true
+  enabled: false
   max_related: 5
 
 # Giscus comments (RECOMMENDED)
