--- a/_config.yml
+++ b/_config.yml
@@ -133,12 +133,11 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple attempt at writting something
+blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
-alshedivat.github.io/al-folio/ 
 pagination:
  enabled: true
 
